# ChangeLog for net-analyzer/nagios-check_mysql_health
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-check_mysql_health/ChangeLog,v 1.8 2014/01/21 18:25:22 sdamashek Exp $

  21 Jan 2014;  <samuel@gentoo.org> metadata.xml:
  Remove proxy-maint herd and change email to my gentoo address

*nagios-check_mysql_health-2.1.8.2 (18 Dec 2013)

  18 Dec 2013; Markos Chandras <hwoarang@gentoo.org>
  +nagios-check_mysql_health-2.1.8.2.ebuild:
  Version bump thanks to Samuel Damashek <samuel.damashek@gmail.com>. Bug
  #494536

  15 Dec 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add Samuel Damashek <samuel.damashek@gmail.com> as proxy-maintainer

  10 Dec 2012; Benedikt Böhm <hollow@gentoo.org> metadata.xml:
  remove myself from metadata

*nagios-check_mysql_health-2.1.7 (19 Mar 2012)

  19 Mar 2012; Benedikt Böhm <hollow@gentoo.org>
  -nagios-check_mysql_health-2.1.1.ebuild,
  +nagios-check_mysql_health-2.1.7.ebuild:
  version bump wrt #407439

*nagios-check_mysql_health-2.1.5 (07 Apr 2011)

  07 Apr 2011; Benedikt Böhm <hollow@gentoo.org>
  +nagios-check_mysql_health-2.1.5.ebuild:
  version bump wrt #362421

  20 May 2010; Robin H. Johnson <robbat2@gentoo.org>
  nagios-check_mysql_health-2.1.1.ebuild:
  Fix multilib-strict.

*nagios-check_mysql_health-2.1.1 (12 May 2010)

  12 May 2010; Benedikt Böhm <hollow@gentoo.org>
  +nagios-check_mysql_health-2.1.1.ebuild, +metadata.xml:
  initial ebuild