@@ -1,22 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST check_mysql_health-2.1.5.tar.gz 118294 SHA256 3c06bf8fd9f2cfed9e65f016ddbc41a899e95969b5afce534aa26501f103555b
-DIST check_mysql_health-2.1.7.tar.gz 119596 SHA256 3646076dcb93b8d79ad7e890a36023ac345b359151c0f7ae653ceb1a84eed8f0
 DIST check_mysql_health-2.1.8.2.tar.gz 120052 SHA256 7fe0f1431742c2fe282faa234fc7b756679d81bb8a0aa2e786afef48540e7423 SHA512 57e26f57d37f274126c0e8f1133f91b9ac5b40696811eb0738fa02f246b48ca41ef291293beb31651cdf9db5854e75707c906a19b336a0f31410ff494b4c0f2d WHIRLPOOL da29c94e639ab2ce2bb065608bd8b9dc541e91340a07641c850160ee6aeef372f7d4258a145bee3badd231a904d4158b3074a3403f66dcf015b961fb11d21fb4
-EBUILD nagios-check_mysql_health-2.1.5.ebuild 837 SHA256 8f57f976d1486d906a18feac58ae4e598b08fb36ec7b24d6596e67d77e0b8a7e SHA512 bb6fe0fcbb46641475a5d9cc154d4266b133b6757eee19dcb1b4da1d5996635086ef6fe47e4712ecef5cd48a9a56408a94e1f319b1c625a6753685ca31af09df WHIRLPOOL 6debb6dbac7d7a8316cc71a8a56dd5a7fd140041a8fe73f3cf75850da3278955b59a3467bb8136f02d1364be222b35fe70bdb7143a2aaa964479215815d99c7e
-EBUILD nagios-check_mysql_health-2.1.7.ebuild 837 SHA256 2802f7ef532a6863ac243d0b8e608d36752b13ba53515d3b88fad3d8362a481f SHA512 c7c50d5e078e573e9fc6cd3b001a3f4db742d894811c75c4ef2e185b2a022d9c00d31b8c33515460401e39ea099dc68c81c5b5a2ba9027f9fb1585b6e74c28f1 WHIRLPOOL 4c611a1071eea183475d19a34a2b526dd0113d88a8e77e84766771e7200a7f29ea2491ed3a5478ec8d3fe180c89c59bd11ffc834ecc561cf9a43c2e24c951d4d
-EBUILD nagios-check_mysql_health-2.1.8.2.ebuild 846 SHA256 2919f0780f0cd9b96763844c0ac6373f1645afac3a42d7c4b963c20aa4e00621 SHA512 43424ac46423797ccad7416ce7e6fc4239ef4fcac52723d461c9b51c049d927c405c5fc5f75bcb8135def064392fb8d97add0977f0e7810f6808e9d44ca42424 WHIRLPOOL 7b03dcebf3eb4324654ed87eb8d3b97e4ab6f22f1942b2671fbac64a9f8d8cac7fd783452679c937b5ff8e0e866cc0691bf54413af5e510ca3ae148a7dd2ffaf
-MISC ChangeLog 1506 SHA256 6e56077fe358d720e69e9fd351b1a34c307529193a2cfc3ce2515a18723ac47d SHA512 9964cd6cccb6c60f5138068332357f6036bfa7260134a2fe91a8e5ceba76fc729608b7a9de4c408baddea4478224ca82bf95115b7b26fbbb6d74776efe93f543 WHIRLPOOL d0364f84d4758d07e6aeedc52e0b672c311702a1dc109685943953050e9c875c213999d1af387a4ca041e9c97f2348418425fbe92fc679745431335777edbfcb
-MISC metadata.xml 237 SHA256 477997da841be364d0b8b34fb0d6f822861b05d2b4f7cf84ab2ce1e328d4305a SHA512 d8ce8b3512e03774667c336e6b01c4c2ce002c96a96623933d58461961b6a6f5ccc11f95ad170d6c78dd0345bf713fb9f68aa4163d5ee07d7ab0ac9ab011e891 WHIRLPOOL 9a0a4164d1d41a3c159bef49da82468af954ad1461e72ed0b343440d348a8a86ebc9039f31070e356798a34d09ffe0e8a7a85da1fb6e85629ab74d668988de8c
+EBUILD nagios-check_mysql_health-2.1.8.2.ebuild 844 SHA256 c78e35af5be27ef84a2f79656fa47f41b714e436c65a0399cb3470ce1963f6bd SHA512 748a0eba24bf7b8d7df98485ead9a4fec296dd22bb1e51ad2b25bd78698554115d47340ed8daef4edfbdb097b75ba64ce8cc28277d69f20721662245fe8e8f8e WHIRLPOOL fc248d166066b29119e2683541d4912f7a70b888079dab48548b2fd81c723ca9c8f93dead3b833e7f36799e4b6f57e09712433b901e8484c6b659aa114ebfbb3
+MISC ChangeLog 1749 SHA256 525bd0ab787df1d5bed148964bc2b07f4edd4f49851988f97879e5439dbbd6ec SHA512 4c9628ecea0a29fe854f6b77f8a3333d6be82b90ec1b291d625c3d874f6104c731e41040f3f777f452b22a5801f95c3215e9dcae4ec0062d7b1b674510594aef WHIRLPOOL 94a7ee63f5f87c1af76eeb485519c2162cdcb072db80074bd5f684b67d95f41518dca4e198fae59f27d6dba2c56034d26d881fb7178178214317e7831bda9ff4
+MISC metadata.xml 519 SHA256 5a63c9964c7bc4db81f24a8024cfb1d159c7540b055896a491807a8a2ac9cccb SHA512 00f79c774948fdaea5d389e1c7f2ef1a3dda87c036453d192146d32c78bdfcee7e78203b79e304046368185bb409b78bccfca83e22ee241948ea126af13cf8c1 WHIRLPOOL 084496907729562cc65255c051bd08dd687df68a5324f82e34c44457d9e70888e76c7188fa35e5ef86378843f844a7d38b4aed9917cf479ae28ef85369822f75
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJS3ruBAAoJEGw+uP08RytWCVcH/RLlAxsVBUm1n8GYT3MdZpnr
-4ZEDfeWTB+zW2nxtfjltvSNmomDLgo44B3vv5oHNJ4X++FfDXY6CmrjmD+Usu9km
-M+ua6DhttDa07SYibd9ysakfirOqGlHGCm9/RIodG1IXUbmeppk3gwdX/z3H0NLm
-MfKQSX6/nHdfE3lmn1G986ghXOpP4x+dy6nrpRHGe3zA6sAgYxazB6/53lHwJhtP
-HkensMAzZ4ipXbO48mJZSx4/BqI9KKDI47bW72S6veswcYygTquBzIPJ61DURGJg
-JQCFyatltfwv+T7u5lKWfhPUvsqMMBFbqbQPFLaMJIPcg0i/cP7LuTnrd6UQ9Hs=
-=ylaH
+iKYEAREIAGYFAlLkefRfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldEM2NzU5RjUyMDczREJDQkVDQTBDRkE1NERC
+Nzk1QThBNDI2MTgzNTQACgkQ23laikJhg1ShvACgj8jp2GxRcJJ3AwmDEUlj9Hz9
+GOEAmwRWK961UR156prJ01H3df4p2AS4
+=hE03
 -----END PGP SIGNATURE-----
