@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/nagios-check_mysql_health
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-check_mysql_health/ChangeLog,v 1.8 2014/01/21 18:25:22 sdamashek Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-check_mysql_health/ChangeLog,v 1.9 2014/01/26 02:59:42 creffett Exp $
+
+  26 Jan 2014; Chris Reffett <creffett@gentoo.org>
+  -nagios-check_mysql_health-2.1.5.ebuild,
+  -nagios-check_mysql_health-2.1.7.ebuild, metadata.xml,
+  nagios-check_mysql_health-2.1.8.2.ebuild:
+  Add proxy-maintainer, cleanup old, EAPI bump.
 
   21 Jan 2014;  <samuel@gentoo.org> metadata.xml:
   Remove proxy-maint herd and change email to my gentoo address
